# ST-Harmon

./: .gitignore  importance15.npy  main.py  npy_comp.py  prompts_template.txt  pyproject.toml  test_imp.sh  viewer.py
configs/models/: qwen2_5_1_5b_kl16_mar_p.py
scripts/: coor_functions.py  cylindrical_functions_temp.py  importance_functions.py  importance_functions_temp.py  main_functions.py  text2image.py  text2pano.py  text2pano_raw.py  text2pano_temp.py  text2pano_test.py  text2pano_v1.py  text2pano_v2_5.py  text2pano_v2_5_1.py  text2pano_v3.py
spherediff/: pipeline_spherical_sana_original.py  spherical_functions.py
src/models/: harmon_p_temp.py  harmon_p_v1.py
src/models/mar/diffusion/: gaussian_diffusion.py  respace.py
